gradle compile replace